--- a/src/app/heroes/pages/home/home.component.html
+++ b/src/app/heroes/pages/home/home.component.html
@@ -1,8 +1,14 @@
-<h1>Heroes App</h1>
-<a routerLink="/heroes/listado">Ir a Listado de Heroes</a>
-<a routerLink="/heroes/agregar">Ir a Agregar Heroes</a>
-<a routerLink="/heroes/buscar">Ir a Buscar Heroes</a>
-<a routerLink="/heroes/1">Ir a Heroe</a>
-<a routerLink="/heroes/editar/1">Ir a Editar Heroes</a>
-<hr />
+<mat-drawer-container fullscreen>
+    <mat-sidenav #sidenav>
+        <h1>Sidenav</h1>
+    </mat-sidenav>
+    <mat-toolbar>
+        <button mat-icon-button (click)="sidenav.toggle()">
+            <mat-icon>
+                menu
+            </mat-icon>
+        </button>
+    </mat-toolbar>
+</mat-drawer-container>
+
 <router-outlet></router-outlet>
