--- a/src/app/heroes/pages/home/home.component.html
+++ b/src/app/heroes/pages/home/home.component.html
@@ -1,14 +1,38 @@
-<mat-drawer-container fullscreen>
-    <mat-sidenav #sidenav>
-        <h1>Sidenav</h1>
-    </mat-sidenav>
-    <mat-toolbar>
-        <button mat-icon-button (click)="sidenav.toggle()">
-            <mat-icon>
-                menu
-            </mat-icon>
-        </button>
+<mat-sidenav-container fullscreen>
+  <!-- Sidebar -->
+  <mat-sidenav #sidenav mode="push">
+    <mat-toolbar color="primary">
+      <h1>Menu</h1>
+      <span class="spacer"></span>
+      <button mat-icon-button (click)="sidenav.toggle()">
+        <mat-icon> menu </mat-icon>
+      </button>
     </mat-toolbar>
-</mat-drawer-container>
-
-<router-outlet></router-outlet>
+    <mat-selection-list #rutas [multiple]="false">
+      <mat-list-option routerLink="./listado" (click)="sidenav.toggle()">
+        <mat-icon mat-list-icon>label</mat-icon>
+        <span>Listado de Heroes</span>
+      </mat-list-option>
+      <mat-list-option routerLink="./agregar" (click)="sidenav.toggle()">
+        <mat-icon mat-list-icon>add</mat-icon>
+        <span>Añadir Heroe</span>
+      </mat-list-option>
+      <mat-list-option routerLink="./buscar" (click)="sidenav.toggle()">
+        <mat-icon mat-list-icon>search</mat-icon>
+        <span>Buscar Heroe</span>
+      </mat-list-option>
+    </mat-selection-list>
+  </mat-sidenav>
+  <!-- Navbar -->
+  <mat-toolbar>
+    <button mat-icon-button (click)="sidenav.toggle()">
+      <mat-icon> menu </mat-icon>
+    </button>
+    <span class="spacer"></span>
+    <button mat-button>LogOut</button>
+  </mat-toolbar>
+  <!-- Router Outlet -->
+  <div class="container">
+    <router-outlet></router-outlet>
+  </div>
+</mat-sidenav-container>
